fixed loader dissapearing on small screen

--- a/src/sass/pages/_dashboard.scss
+++ b/src/sass/pages/_dashboard.scss
@@ -1,9 +1,10 @@
 .dashboard-container {
     .loadingContainer {
         width: 100%;
+        min-height: 400px;
         &>img {
             display: block;
-            margin: 10px auto;
+            margin: 100px auto;
         }
     }
     .hr-divider {
